2023-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/sandboxed_server/README.md: Add README noting need to
	rebuild RInside with `RINSIDE_CALLBACKS` defined

2023-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2023-03-14  Joris Goosen  <joris@jorisgoosen.nl>

	* inst/examples/qt/cmake/CMakeLists.txt: Refine qt6 change
	* inst/examples/qt/README: Idem

2023-03-13  Joris Goosen  <joris@jorisgoosen.nl>

	* inst/examples/qt/qtdensity.cpp: Update to qt6
	* inst/examples/qt/cmake/CMakeLists.txt: Idem
	* inst/examples/qt/README: Idem

2023-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.18

	* src/Makevars ($(USERLIB)): Use relative file location in
	install_name_tool call, additional checks for when to call

	* README.md: Update several URLs to https://

2023-01-31  Dominick Samperi  <djsamperi@gmail.com>

	* src/RInside.cpp: Switch to run_Rmainloop()

2022-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (init_rand): Minor update inspired from the
	corresponding code in R 4.1.0
	* inst/include/RInsideCommon.h: Include stdint.h

2022-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.17

	* README.md: Four more URLs were updated

2022-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (myReadConsole): Windows-only patch provided by
	Tomas Kalibera for upcoming R 4.2.0, adjusted for R (>= 4.2.0) too

2021-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2021-05-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add github repo URL to DESCRIPTION

2021-01-17  Dirk Eddelbuettel  <edd@debian.org>
